# dotfiles

./: .gitignore  README.md  pyproject.toml  setup.sh  setup_ai_rules.py  setup_configs.py  setup_editors.py  setup_env.py  setup_extras.py  setup_files.py  setup_shell.py  setup_tools.py  setup_vscode.py
ai-rules/coding/: git.md  python.md
ai-rules/dev/: asgard.md  git.md  python.md
bash/: bash_aliases  bashrc  inputrc
editors/: DefaultKeyBinding.dict
editors/nvim/: init.lua  lazy-lock.json
editors/vscode/: extensions.txt  keybindings.json  settings.json
editors/vscode/keybindings/: management.jsonc  navigation.jsonc  utilities.jsonc
editors/vscode/settings/: editor.jsonc  git.jsonc  minimap.jsonc  python.jsonc  terminal.jsonc  ui.jsonc
editors/zed/: keymap.json  settings.json
editors/zed/keymap/: agent.jsonc  editor.jsonc  global.jsonc  keymap.jsonc  pane.jsonc
editors/zed/settings/: ai.jsonc  editor.jsonc  panels.jsonc  remote.jsonc  terminal.jsonc
extras/arch-x11/: README.md  mouse-workspace-buttons.xbindkeysrc  touchpad-workspace-gestures.conf  xfce-theme-toggle  xfce-window-behavior.sh
extras/hpc/: pbs.sh  slurm.sh
extras/macos/: DefaultKeyBinding.dict  README.md
extras/personal/: project-aliases.sh
ghostty/: config
nvim/: init.lua  init.vim
profiles/: arch-x11.toml  macos.toml  remote-pbs.toml  remote-slurm.toml
rules/dev/: asgard.md  git.md  python.md
rules/dev/python/: classes.md  docs.md  docstrings.md  errors.md  formatting.md  functions.md  layout.md  maintenance.md  naming.md  setup.md  style.md  testing.md
rules/dev/quokka/: workflow.md
rules/writing/: docs.md
setup/: __init__.py  editors.py  extras.py  rules.py  shell.py  tools.py
shell/: setup.sh  setup_shell.sh
shell/bash/: bash_options  bash_profile  bash_prompt  bashrc  inputrc
shell/utils/: aliases  functions  git_options  paths  shell_aliases  shell_functions  shell_options  shell_paths
shell/zsh/: zsh_options  zsh_prompt  zshrc
terminal_workflow/ghostty/: config
terminal_workflow/nvim/: init.lua
tmux/: tmux.conf
tools/emacs/: config.el  init.el  keybindings.el  packages.el
tools/ghostty/: config
tools/kitty/: catppuccin-mocha.conf  kitty.conf
tools/nvim/: lazy-lock.json
tools/tmux/: tmux.conf
tools/tmux/conf/: 01-options.conf  02-keybindings.conf  03-panes.conf  (+3 more)
tools/yazi/: yazi.toml
utils/: apply_shell_actions.py  load_profiles.py  log_messages.py  logging.py  profiles.py  shell_actions.py  shell_ops.py
vscode/: extensions.txt  keybindings.json  settings.json
vscode/config/: editor.json  terminal.json  ui.json
vscode/keybindings/: management.jsonc  navigation.jsonc  utilities.jsonc
vscode/settings/: remote.json  terminal.json  ui.json
(+16 files in other folders)
