[project]
name = "dotfiles"
version = "0.1.0"
description = "Personal dotfiles setup scripts and tracked configuration files."
readme = "README.md"
authors = [{ name = "Neco Kriel", email = "necokriel@gmail.com" }]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
]

[tool.pyright]
include = ["setup_configs.py", "setup", "utils"]

## --- rules to enforce
reportMissingImports = true
reportMissingTypeStubs = false  # third-party packages rarely ship stubs

## --- rules to suppress
reportImplicitStringConcatenation = "none"  # valid style for long error messages
reportUnusedCallResult = "none"  # setup helpers and argparse builders are called for side effects
